--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/localize": "~11.2.12",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
+    "@angular/material": "^11.2.13",
     "@angular/router": "~11.2.12",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "angular-datatables": "^12.0.0",
